# Playground

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  ParameterGenerator.cxx  TestMachine.cxx  TestMatrix.cxx  TestModel.cxx
include/: Contour.hh  Global.hh  Log.hh  Machine.hh  Model.hh  MultiVariateModel.hh  Parameter.hh  Point.hh  Random.hh  Space.hh  Variable.hh
src/: CMakeLists.txt  Contour.cpp  Global.cpp  Log.cpp  Machine.cpp  Model.cpp  MultiVariateModel.cpp  Parameter.cpp  Point.cpp  Random.cpp  Space.cpp  Variable.cpp
